Created Lightbox for artgallery

--- a/src/features/StreetcodePage/ArtGalleryBlock/ArtGalleryItem/ArtGallerySlideItem.styles.scss
+++ b/src/features/StreetcodePage/ArtGalleryBlock/ArtGalleryItem/ArtGallerySlideItem.styles.scss
@@ -12,6 +12,7 @@
 .artImageWrapper {
   position: relative;  
   &:hover {
+    cursor: pointer;
     .imgDataFull {
       visibility: visible;
       opacity: 1;
