--- a/src/assets/sass/variables/_variables.colors.scss
+++ b/src/assets/sass/variables/_variables.colors.scss
@@ -2,6 +2,8 @@ $pure-white-color: #FFFFFF !important;
 $pure-black-color: #000000 !important;
 $lighter-black-color: #1D1F23 !important;
 
+$transparent-color: rgba(255, 255, 255, 0)!important;
+
 $accented-gray-color: #F4F4F4 !important;
 $lighter-gray-color: #D3CDCA !important;
 $darker-gray-color: #5D5D5D !important;
