--- a/src/features/ProgressBar/ProgressBar.styles.scss
+++ b/src/features/ProgressBar/ProgressBar.styles.scss
@@ -13,7 +13,9 @@
   @include mut.sized(74px, 43px);
   @include mut.positioned-as(fixed, $bottom: 0, $left: 60px);
 
+  z-index: 100;
   @include mut.flex-centered();
+
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
 
