--- a/src/features/StreetcodePage/TimelineBlock/TimelineSwiper/TimelineSwiperEdgeBtn/TimelineSwiperEdgeBtn.styles.scss
+++ b/src/features/StreetcodePage/TimelineBlock/TimelineSwiper/TimelineSwiperEdgeBtn/TimelineSwiperEdgeBtn.styles.scss
@@ -20,8 +20,7 @@
   }
 
   > * {
-    position: relative;
-    bottom: f.pxToRem(60px);
+    @include mut.positioned-as(relative, $bottom: 60px);
     @include mut.with-font(ft.$closer-text-font, $font-weight: 500, $font-size: 30px);
   }
 }
