--- a/src/app/common/components/modals/Donates/DonatesModal.styles.scss
+++ b/src/app/common/components/modals/Donates/DonatesModal.styles.scss
@@ -41,15 +41,27 @@
     @include mut.with-font($font-weight: 300);
   }
 
-  > span {
+  > .amountInput {
     @include mut.rem-margined($top: 23px, $bottom: 35px);
     @include mut.with-font(ft.$closer-text-font, $font-size: 64px, $font-weight: 500);
+    text-align: center;
+
     color: c.$darkish-gray-color;
+    border: none;
+
+    &.active {
+      color: c.$pure-black-color;
+      text-shadow: 1px 0 1px c.$pure-black-color;
+    }
+
+    &:focus {
+      outline: none;
+    }
   }
 
   .donatesBtnContainer {
     @include mut.sized(679px, 64px);
-    @include mut.flexed($justify-content: space-between, $gap: 25px);
+    @include mut.flexed($direction: row-reverse, $justify-content: space-between, $gap: 25px);
 
     > * {
       @include mut.sized(212px, inherit);
@@ -61,12 +73,18 @@
       filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.19));
 
       > span {
+        @include vnd.vendored(transition, 'color .75s ease');
         @include mut.with-font(ft.$closer-text-font, $font-size: 36px, $font-weight: 350);
         color: c.$pure-black-color;
       }
 
-      &:hover {
-        background-color: c.$lighter-gray-color;
+      &:where(:hover, &.active) {
+        background-color: c.$accented-red-color;
+
+        > span {
+          color: c.$pure-white-color;
+          font-weight: 500;
+        }
       }
     }
   }
