--- a/src/app/common/components/modals/Lightbox/LightboxComponent.styles.scss
+++ b/src/app/common/components/modals/Lightbox/LightboxComponent.styles.scss
@@ -9,8 +9,8 @@
     height:  pxToRem(58px)!important;
     $path: "@assets/images/utils/#{$direction}DefaultSliderArrow.svg";
     background-image: url($path);
-    background-size:cover;
-    position:absolute;
+    background-size: cover;
+    position: absolute;
     .yarl__icon{
         background-color: c.$transparent-color;
         color: c.$transparent-color;
@@ -37,15 +37,17 @@
 }
 
 .yarl__slide_description {
+    @include mut.rem-margined($top: 25px);
     @include mut.with-font();
     @include mut.sized($height: 129px);
     -webkit-line-clamp: inherit!important;
 }
 
 .yarl__icon {
+    @include mut.rem-margined($top: 10px);
     background-color: c.$transparent-color;
-    width: pxToRem(50px)!important;
-    height:  pxToRem(50px)!important;
+    width: pxToRem(35px)!important;
+    height:  pxToRem(35px)!important;
 }
 .yarl__navigation_prev {
     @include slick-arrow-lightbox(left);
@@ -57,8 +59,7 @@
     right: pxToRem(30px)!important;
 }
 
-.yarl__container {
-    &:hover {
+.lightboxWithCaptions {
         .yarl__slide_captions_container {
             visibility: visible;
             opacity: 1;
@@ -71,7 +72,9 @@
             visibility: visible;
             opacity: 1;
         }
-    }
+
+}
+.lightboxWithoutCaptions{
     .yarl__slide_captions_container {
         @include vnd.vendored(transition, 'all .5s ease');
         visibility: hidden;
