--- a/src/app/common/components/modals/Lightbox/LightboxComponent.styles.scss
+++ b/src/app/common/components/modals/Lightbox/LightboxComponent.styles.scss
@@ -27,13 +27,17 @@
 }
 
 .yarl__slide_title {
-    @include mut.rem-margined($top: 23px, $left: 35px);
+    @include mut.rem-margined($top: 15px, $left: 35px);
     @include mut.with-font($font-weight: 500);
     color: #4E4E4E!important;
 }
 
 .yarl__slide_description_container {
     @include mut.sized($height: 159px);
+}
+
+.yarl__slide_title_container {
+    @include mut.sized($height: 68px);
 }
 
 .yarl__slide_description {
@@ -43,12 +47,21 @@
     -webkit-line-clamp: inherit!important;
 }
 
-.yarl__icon {
-    @include mut.rem-margined($top: 10px);
-    background-color: c.$transparent-color;
-    width: pxToRem(35px)!important;
-    height:  pxToRem(35px)!important;
+.yarl__slide{
+    padding: 0!important;
 }
+
+.yarl__icon {
+    @include mut.rem-margined($top: 10px, $right: 25px);
+    background-color: c.$transparent-color;
+    width: pxToRem(30px)!important;
+    height:  pxToRem(30px)!important;
+    color: #4E4E4E!important;
+    &:hover{
+        color: #918f8f!important;
+    }
+}
+
 .yarl__navigation_prev {
     @include slick-arrow-lightbox(left);
     left: pxToRem(30px)!important;
