--- a/src/app/common/components/modals/Lightbox/LightboxComponent.styles.scss
+++ b/src/app/common/components/modals/Lightbox/LightboxComponent.styles.scss
@@ -5,102 +5,77 @@
 @use "@sass/mixins/_vendor.mixins.scss" as vnd;
 
 @mixin slick-arrow-lightbox($direction) {
-    width: pxToRem(40px)!important;
-    height:  pxToRem(58px)!important;
-    $path: "@assets/images/utils/#{$direction}DefaultSliderArrow.svg";
-    background-image: url($path);
-    background-size: cover;
+    @include mut.sized(40px, 58px);
+    @include mut.bg-image("@assets/images/utils/#{$direction}DefaultSliderArrow.svg");
     position: absolute;
-    .yarl__icon{
-        background-color: c.$transparent-color;
-        color: c.$transparent-color;
+
+    .yarl__icon {
+        @include mut.colored(c.$transparent-color, c.$transparent-color);
     }
-    &:hover{
+
+    &:hover {
         filter: brightness(60%);
     }
 }
 
-.yarl__slide_image {
-    max-width: min(100%)!important;
-    max-height: min(100%)!important;
-    height: 100%!important;
-}
-
-.yarl__slide_title {
-    @include mut.rem-margined($top: 15px, $left: 35px);
-    @include mut.with-font($font-weight: 500);
-    color: #4E4E4E!important;
-}
-
-.yarl__slide_description_container {
-    @include mut.sized($height: 159px);
-}
-
-.yarl__slide_title_container {
-    @include mut.sized($height: 68px);
-}
-
-.yarl__slide_description {
-    @include mut.rem-margined($top: 25px);
-    @include mut.with-font();
-    @include mut.sized($height: 129px);
-    -webkit-line-clamp: inherit!important;
-}
-
-.yarl__slide{
-    padding: 0!important;
-}
-
-.yarl__icon {
-    @include mut.rem-margined($top: 10px, $right: 25px);
-    background-color: c.$transparent-color;
-    width: pxToRem(30px)!important;
-    height:  pxToRem(30px)!important;
-    color: #4E4E4E!important;
-    &:hover{
-        color: #918f8f!important;
-    }
-}
-
-.yarl__navigation_prev {
-    @include slick-arrow-lightbox(left);
-    left: pxToRem(30px)!important;
-}
-
-.yarl__navigation_next {
-    @include slick-arrow-lightbox(right);
-    right: pxToRem(30px)!important;
-}
-
-.lightboxWithCaptions {
-        .yarl__slide_captions_container {
-            visibility: visible;
-            opacity: 1;
+.lightbox {
+    &.disabled {
+        .yarl__slide_captions_container, .yarl__toolbar, .yarl__button {
+            @include vnd.vendored(transition, 'all .5s ease');
+            visibility: hidden;
+            opacity: 0;
         }
-        .yarl__toolbar {
-            visibility: visible;
-            opacity: 1;
-        }
-        .yarl__button {
-            visibility: visible;
-            opacity: 1;
-        }
+    }
 
-}
-.lightboxWithoutCaptions{
-    .yarl__slide_captions_container {
-        @include vnd.vendored(transition, 'all .5s ease');
-        visibility: hidden;
-        opacity: 0;
+    .yarl__slide_image {
+        max-width: min(100%) !important;
+        max-height: min(100%) !important;
+        height: 100% !important;
     }
-    .yarl__toolbar {
-        @include vnd.vendored(transition, 'all .5s ease');
-        visibility: hidden;
-        opacity: 0;
+
+    .yarl__slide_title {
+        @include mut.rem-margined($top: 15px, $left: 35px);
+        @include mut.with-font($font-weight: 500);
+        color: #4E4E4E !important;
     }
-    .yarl__button {
-        @include vnd.vendored(transition, 'all .5s ease');
-        visibility: hidden;
-        opacity: 0;
+
+    .yarl__slide_description_container {
+        @include mut.sized($height: 159px);
+    }
+
+    .yarl__slide_title_container {
+        @include mut.sized($height: 68px);
+    }
+
+    .yarl__slide_description {
+        @include mut.sized($height: 129px);
+        @include mut.rem-margined($top: 25px);
+
+        @include mut.with-font();
+        -webkit-line-clamp: inherit !important;
+    }
+
+    .yarl__slide {
+        padding: 0 !important;
+    }
+
+    .yarl__icon {
+        @include mut.sized(30px, 30px);
+        @include mut.rem-margined($top: 10px, $right: 25px);
+        @include mut.colored(#4E4E4E !important, c.$transparent-color);
+
+        &:hover {
+            color: #918f8f!important;
+        }
+    }
+
+    .yarl__navigation_prev {
+        @include slick-arrow-lightbox(left);
+        left: pxToRem(30px) !important;
+    }
+
+    .yarl__navigation_next {
+        @include slick-arrow-lightbox(right);
+        right: pxToRem(30px) !important;
     }
 }
