--- a/src/features/StreetcodePage/PartnersBlock/Partners.styles.scss
+++ b/src/features/StreetcodePage/PartnersBlock/Partners.styles.scss
@@ -10,8 +10,13 @@
         @include mut.sized($width: 100%, $height: 100%);
         @include mut.flexed($justify-content: space-between, $align-items: center, $direction: row);
 
+        .slick-slide{
+            @include mut.flex-centered();
+        }
+
         .partnerItem {
             @include mut.sized($width: 380px, $height: 121px);
+            @include mut.flex-centered();
         }
     }
 }
