Margin between components titles and contents

--- a/src/features/StreetcodePage/HeadingBlock/BlockHeading.styles.scss
+++ b/src/features/StreetcodePage/HeadingBlock/BlockHeading.styles.scss
@@ -5,6 +5,7 @@
 .blockHeadingWrapper {
     @include mut.sized(100%, 124px);
     @include mut.flex-centered();
+    margin: 1.625rem;
 
     svg {
         z-index: 0;
