Fixed color of arrows in lightbox (Art)

--- a/src/app/common/components/modals/Lightbox/LightboxComponent.styles.scss
+++ b/src/app/common/components/modals/Lightbox/LightboxComponent.styles.scss
@@ -72,10 +72,14 @@
     .yarl__navigation_prev {
         @include slick-arrow-lightbox(left);
         left: pxToRem(30px) !important;
+        filter: brightness(35%);
+
     }
 
     .yarl__navigation_next {
         @include slick-arrow-lightbox(right);
         right: pxToRem(30px) !important;
+        filter: brightness(35%);
+
     }
 }
