--- a/src/features/StreetcodePage/TimelineBlock/Timespan/Timespan.styles.scss
+++ b/src/features/StreetcodePage/TimelineBlock/Timespan/Timespan.styles.scss
@@ -3,10 +3,12 @@
 @use "@sass/variables/_variables.fonts.scss" as ft;
 @use "@sass/_utils.functions.scss" as f;
 @use "@sass/mixins/_vendor.mixins.scss" as vnd;
-
+.timelineYearTicksContainerSwiper{
+  width: 100vw;
+}
 .timeSpanContainer {
   height: f.pxToRem(8px);
-  margin-top: f.pxToRem(100px);
+  margin: f.pxToRem(100px) auto 0 auto;
   background-color: c.$dark-red-color;
 
   .timelineYearTicksContainer {
@@ -14,6 +16,7 @@
     @include mut.rem-padded(0, 100px, 20px, 100px);
 
     .timelineYearTick {
+      overflow: visible;
       @include mut.parent-sized();
       @include mut.flex-centered();
 
