Fixes assigned 13th Feb
1. Created Menu animation
2. Fixed footer
3. Made sticky buttons
4. Created path Долучитись -> Задонатити -> DonateModal

--- a/src/assets/sass/mixins/_utils.mixins.scss
+++ b/src/assets/sass/mixins/_utils.mixins.scss
@@ -170,7 +170,7 @@
   $font-family: ft.$roboto-font,
   $font-weight: normal,
   $font-size: 20px,
-  $font-style: normal
+  $font-style: ft.$roboto-font-style
 ) {
   font-family: $font-family;
   // px equivalent for browsers without rem support
