--- a/src/assets/sass/variables/_variables.fonts.scss
+++ b/src/assets/sass/variables/_variables.fonts.scss
@@ -4,4 +4,6 @@ $body-tag-font: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen
 sans-serif;
 
 $roboto-font: 'Roboto', 'Helvetica Neue', sans-serif !important;
+$roboto-light: 'Roboto-Light', 'Helvetica Neue', sans-serif;
+$roboto-font-style: normal;
 $closer-text-font: 'Closer Text', $roboto-font;
