--- a/src/features/StreetcodePage/TextBlock/TextBlock.styles.scss
+++ b/src/features/StreetcodePage/TextBlock/TextBlock.styles.scss
@@ -1,5 +1,7 @@
 @use "@assets/sass/mixins/_utils.mixins.scss" as mut;
 @use "@sass/_utils.functions.scss" as f;
+@use '@assets/sass/variables/variables.fonts' as ft;
+
 
 .textComponentContainer {
     @include mut.sized(100%, auto);
@@ -8,7 +10,8 @@
 .TextContainer {
     @include mut.sized(1200px, auto);
     @include mut.rem-margined($top: 27px);
-    @include mut.with-font();
+    //@include mut.with-font($font-family: ft.$roboto-light);
+    @include mut.with-font($font-weight: 300, $font-size:20px);
 }
 .videoComponent,
 .textComponent {
