--- a/src/app/layout/header/HeaderDrawer/HeaderDrawer.styles.scss
+++ b/src/app/layout/header/HeaderDrawer/HeaderDrawer.styles.scss
@@ -16,28 +16,53 @@
   width: f.pxToRem(262px) !important;
 }
 
+.grid-container {
+  display: grid;
+  grid-template-columns: 2% 98%;
+  position: absolute;
+  left: 20%;
+}
+
+.customSlider {
+  position: absolute;
+  top: f.pxToRem(18px);
+  left: 90%;
+  height: f.pxToRem(368px);
+  width: 25%;
+}
+
+.customSlider-track {
+  top: f.pxToRem(8px);
+  width: f.pxToRem(1.8px);
+  background: c.$normal-gray-color;
+  position: relative;
+}
+
+.thumb {
+  cursor: default;
+  position: absolute;
+  left: -(f.pxToRem(5.2px));
+  z-index: 100;
+  background: c.$dark-red-color;
+  border: f.pxToRem(6px) solid c.$dark-red-color;
+  display: block;
+  transition: all;
+  transition-duration: 0.5s;
+}
+
+
 .headerDrawerContainer {
+  #active{
+    color: c.$dark-red-color;
+  }
   @include mut.flexed(column, $align-items: flex-start, $gap: 39px);
 
   margin-left: f.pxToRem(44px);
-  padding-left: f.pxToRem(23px);
-  border-left: 2px solid c.$normal-gray-color;
-
-  &:before {
-    content: "";
-    @include mut.sized(11px, 11px);
-    @include mut.positioned-as(absolute, $left: 24%, $top: 24.5%);
-    background-color: c.$dark-red-color;
-  }
-
+  
   > * {
     @include mut.with-font(ft.$closer-text-font);
     line-height: f.pxToEm(26.4px);
     @include vnd.vendored(transition, 'scale .3s ease');
-
-    &:nth-child(3) {
-      color: c.$dark-red-color;
-    }
 
     &:hover {
       scale: 1.1;
