fixes with height
slide size fixed + some design solutions

--- a/src/app/common/components/modals/RelatedFigures/RelatedFiguresModal.styles.scss
+++ b/src/app/common/components/modals/RelatedFigures/RelatedFiguresModal.styles.scss
@@ -32,7 +32,7 @@ $articlesImg: "@assets/images/sources/Articles.png";
 }
 
 .relatedFiguresImgContainer {
-  position: sticky;
+  //position: sticky;
   @include mut.sized(100%, 97px);
   @include mut.flex-centered();
 
