--- a/src/app/common/components/BurgerMenu/BurgerMenu.styles.scss
+++ b/src/app/common/components/BurgerMenu/BurgerMenu.styles.scss
@@ -3,16 +3,16 @@
 @use "@sass/mixins/_utils.mixins.scss" as mut;
 
 .burgerMenuContainer {
-  @include mut.sized(36px, 100%);
+  @include mut.sized(36px, 28px);
   @include mut.flexed($direction: column, $justify-content: center, $gap: 6px);
   margin-right: f.pxToRem(24px);
 
-  > * {
-    @include mut.sized(100%, 5px);
-    @include mut.full-rounded(12px);
+  .burgerMenuItem {
+    @include mut.sized(36px, 4px);
+    @include mut.full-rounded(15px);
     background-color: c.$normal-gray-color;
   }
-
+іі
   &:hover {
     cursor: pointer;
 
