--- a/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigureItem/RelatedFigureItem.styles.scss
+++ b/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigureItem/RelatedFigureItem.styles.scss
@@ -57,7 +57,7 @@
         @include mut.sized($height: 28px);
         @include mut.flex-centered();
 
-        border: 1.5px solid c.$pure-white-color;
+        border: 2px solid c.$pure-white-color;
         @include mut.full-rounded($rad: 7.86px);
         @include mut.rem-padded($left: 9.5px, $top: 5.5px, $right: 9.5px, $bottom: 5.5px);
 
@@ -73,11 +73,23 @@
     }
 }
 
-.relatedFigureSlide.hoverable:hover{
-    @include mut.sized($width: 278px, $height: 452px);
+.relatedFigureSlide.hoverable.single_row:hover {
+    @include mut.sized($width: 278px, $height: 425px); //422-139 = 283px
 
     .figureSlideText{
-        @include mut.sized($width: 272px, $height: 169px);
+        @include mut.sized($width: 272px, $height: 142px);//should not be fixed value
+
+        .relatedTagList {
+            visibility: visible;
+        }
+    }
+}
+
+.relatedFigureSlide.hoverable:hover { //problem is here
+    @include mut.sized($width: 278px, $height: 459px); //422-139 = 283px
+
+    .figureSlideText{
+        @include mut.sized($width: 272px, $height: 176px); //should not be fixed value
 
         .relatedTagList {
             visibility: visible;
