--- a/src/assets/sass/mixins/_utils.mixins.scss
+++ b/src/assets/sass/mixins/_utils.mixins.scss
@@ -101,7 +101,7 @@
   -webkit-border-radius: $rad !important;
 
   overflow: $overflow !important;
-  background-clip: padding-box;
+  -webkit-background-clip: padding-box;
 }
 
 @mixin full-rounded($rad, $overflow: hidden) {
@@ -209,7 +209,7 @@
     font-display: swap;
   }
 
-  %#{$font-family} {
+  /*%#{$font-family} {
     font: {
       @if $fallback != '' {
         family: '#{$font-family}', #{$fallback};
@@ -218,7 +218,7 @@
         weight: $font-weight;
       }
     }
-  }
+  }*/
 }
 // FadeIn FadeOut animations
 @mixin fadeKeyframes($type: "fadeIn", $name: "fade") {
