--- a/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigures.styles.scss
+++ b/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigures.styles.scss
@@ -3,8 +3,10 @@
 @use "@sass/_utils.functions.scss" as f;
 @use "@sass/variables/_variables.colors.scss" as c;
 
+$moreInfo-width: 150px;
+
 .relatedFiguresWrapper {
-    @include mut.sized($height: 656px);
+    @include mut.sized($height: 575px); //needs refactoring
     @include wr.main-page-block-wrapper();
     @include mut.rem-margined($bottom: 50px, $top: 170px);
 }
@@ -23,26 +25,36 @@
     }
 }
 
+.headingWrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    .blockHeadingContainer {
+        width: 1200px - $moreInfo-width;
+    }
+  }
+
 .relatedFiguresContainer {
     @include mut.sized($width: 90%, $height: 100%);
     @include mut.flexed($direction: column, $align-items: center);
+}
 
-    .moreInfo {
-        //@include mut.sized($width: 1200px);
+.moreInfo {
+    width: $moreInfo-width;
+    p {
+        @include mut.with-font($font-weight: 500, $font-size: 20px);
+        line-height: f.pxToEm(25px);
+        text-decoration-line: none;
+        color: c.$dark-red-color;
+        width: inherit;
 
-        p {
-            @include mut.with-font($font-weight: 500, $font-size: 20px);
-            line-height: f.pxToEm(25px);
-            text-decoration-line: none;
-            color: c.$dark-red-color;
+        cursor: pointer;
 
-            cursor: pointer;
+        &:hover {
+            text-decoration-line: underline;
 
-            &:hover {
-                text-decoration-line: underline;
-
-                filter: contrast(150%);
-            }
+            filter: contrast(150%);
         }
     }
 }
