--- a/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigureItem/RelatedFigureItem.styles.scss
+++ b/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigureItem/RelatedFigureItem.styles.scss
@@ -58,6 +58,7 @@
         @include mut.flex-centered();
 
         border: 2px solid c.$pure-white-color;
+        background: none;
         @include mut.full-rounded($rad: 7.86px);
         @include mut.rem-padded($left: 9.5px, $top: 5.5px, $right: 9.5px, $bottom: 5.5px);
 
