--- a/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigureItem/RelatedFigureItem.styles.scss
+++ b/src/features/StreetcodePage/RelatedFiguresBlock/RelatedFigureItem/RelatedFigureItem.styles.scss
@@ -7,7 +7,6 @@
 .relatedFigureSlide {
     @include mut.sized($width: 278px, $height: 380px);
     @include mut.full-rounded($rad: 30px);
-
     border: 3px solid c.$pure-white-color;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     background-size: 100%;
@@ -23,6 +22,8 @@
 .figureSlideText {
     @include mut.sized($width: 278px, $height: 97px);
     @include mut.flexed($align-items: flex-start, $wrap: wrap);
+    @include mut.rounded($bottom-left: 30px, $bottom-right: 30px);
+
 
     align-content: flex-start;
 
