--- a/src/features/AdminPage/StreetcodesTable/StreetcodesTable.styles.scss
+++ b/src/features/AdminPage/StreetcodesTable/StreetcodesTable.styles.scss
@@ -56,3 +56,14 @@
 .ant-table table { 
     @include mut.with-font(ft.$closer-text-font, $font-weight: 500, $font-size: 18px);
 }
+
+.ant-table-tbody > tr > td {
+    &:hover {
+        cursor: pointer;
+        scale: 1.01;
+    }
+
+    &:active {
+        size: 1.3;
+    }
+}
